Fix search bar icon alignment

--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -28,7 +28,7 @@
 
 .SearchBar_icon {
   position: absolute;
-  top: 10px;
+  top: -1px;
   left: 8px;
 }
 
